upa 1.2.0.3 updated unit tests, fixed complex query issues